plugins {
    id 'java'
    id "application"
}

sourceCompatibility = '1.17'
targetCompatibility = '1.17'

group 'damon140.com'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

apply plugin : "java"
ext {
    javaMainClass = "com.damon140.ur.Game"
}

application {
    mainClassName = javaMainClass
}


dependencies {

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'


    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'org.hamcrest:hamcrest:2.2'
}
